--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/* Parte um */
+
 .container__main {
     align-items: center;
     display: flex;
@@ -25,4 +27,37 @@
     line-height: 30px;
     margin: 0 22em;
     text-align: center;
+}
+
+/* Parte dois */
+
+.container__informacoes {
+    display: flex;
+    justify-content: space-around;
+    margin: 10em 3em;
+}
+
+.itens {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+}   
+
+.valor {
+    color: var(--vermelho);
+    font-size: 60px;
+    line-height: 72px;
+    font-weight: 600;
+}
+
+.informacoes__titulo {
+    color: #101828;
+    font-size: 18px;
+    margin: 1em 0;
+}
+
+.informacoes__paragrafo {
+    color: #667085;
+    font-weight: 400;
+    
 }
