--- a/css/main.css
+++ b/css/main.css
@@ -61,3 +61,41 @@
     font-weight: 400;
     
 }
+
+/* Vagas abertas */
+
+.container__vagas {
+    display: flex;
+    justify-content: center;
+}
+
+.vagas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+}
+
+.vagas__abertas {
+    font-size: 14px;
+    border-radius: 8px;
+    color: white;
+    line-height: 20px;
+    background-color: #8E24240D;
+    color: var(--vermelho);
+    padding: 0.3em;
+}
+
+.vagas__titulo {
+    font-size: 36px;
+    color: black;
+    font-weight: 600;
+    line-height: 44px;
+}
+
+.vagas__paragrafo {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #667085;
+}
