--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@
 .container__vagas {
     display: flex;
     justify-content: center;
+    margin-bottom: 7em;
 }
 
 .vagas {
@@ -98,4 +99,42 @@
     font-weight: 400;
     line-height: 30px;
     color: #667085;
+}
+
+/* Seção de vagas */
+
+.box__vagas {
+    margin: 0 0 3em 25em;
+}
+
+.titulo__vagas {
+    font-size: 20px;
+    line-height: 30px;
+    color: #101828;
+    margin-bottom: 1.3em;
+}
+
+.box {
+    border: 3px solid #EAECF0;
+    border-radius: 8px;
+    width: 60%;
+    padding: 1.3em;
+    margin-bottom: 1.5em;
+}
+
+.box__informacoes {
+    display: flex;
+    gap: 1.5em;
+}
+
+.box__titulo {
+    font-size: 18px;
+    line-height: 28px;
+    color: #101828;
+    margin-bottom: 1.4em;
+}
+
+.box__paragrafo {
+    color: #667085;
+    line-height: 24px;
 }
