--- a/css/main.css
+++ b/css/main.css
@@ -138,3 +138,56 @@
     color: #667085;
     line-height: 24px;
 }
+
+/* Opnioes */
+
+.container__opinioes {
+    background-color: white;
+    margin: 5em 15em 10em 15em;
+}
+
+.box__opnioes {
+    background: rgba(196, 25, 25, 0.03);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+    padding: 2em 0;
+}
+
+.opnioes {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    color: #8E2424;
+}
+
+.opnioes__titulo {
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 44px;
+    color: #101828;
+    text-align: center;
+    margin-bottom: 0.5em;
+}
+
+.perfil {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8em;
+}
+
+.perfil__titulo {
+    line-height: 24px;
+    font-weight: 500;
+    font-size: 16px;
+    color: #101828;
+}
+
+.perfil__paragrafo {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #667085;
+}
